# DocMind

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  railway.json  requirements.txt
app/: __init__.py  config.py  dependencies.py  exceptions.py  main.py
app/api/: __init__.py  router.py
app/api/middleware/: __init__.py  error_handler.py  rate_limiter.py
app/api/v1/: __init__.py  auth.py  debug.py  documents.py  health.py  query.py  sessions.py
app/auth/: email_sender.py
app/cache/: cache_backend.py  embedding_cache.py  in_memory_cache.py  response_cache.py
app/chains/: __init__.py  prompts.py  rag_chain.py
app/db/: __init__.py  chroma_store.py  document_registry.py  faiss_store.py  password_reset_store.py  pgvector_store.py  session_store.py  token_blocklist.py  user_store.py  vector_store.py
app/frontend/: app.js  index.html  styles.css
app/frontend/assets/: index--UVDE-2P.css  index-B4ct5iT4.css  index-BM1LZ9-q.js  index-CAZng6JC.js
app/memory/: context_builder.py  memory_compressor.py  memory_manager.py
app/models/: __init__.py  chunk.py  document.py  query.py  session.py  user.py
app/pipeline/: ingestion_pipeline.py  rag_pipeline.py
app/schemas/: __init__.py  auth.py  document.py  metadata.py  query.py  session.py
app/services/: __init__.py  chunker.py  embedder.py  generator.py  pdf_processor.py  query_reformulator.py  reranker.py  retriever.py  streaming.py  table_extractor.py  text_cleaner.py
app/utils/: __init__.py  file_utils.py  logging.py  openai_client.py  token_counter.py
configs/: default.yaml
docs/: api_contracts.md  architecture.md  data_flow.md  retrieval_strategy.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css  store.js
frontend/src/components/: AuthPage.jsx  ChatApp.jsx  Message.jsx
scripts/: benchmark.py  diagnose_similarity.py  seed_test_data.py
tests/: __init__.py  conftest.py  test_api_documents.py  test_api_query.py  test_api_sessions.py  test_cache.py  test_chunker.py  test_generator.py  test_ingestion_pipeline.py  test_memory_manager.py  test_pdf_processor.py  test_rag_pipeline.py  test_reranker.py  test_retriever.py
