# =============================================================================
# Project Configuration — RAG PDF Q&A
# =============================================================================
#
# Purpose:
#   Defines project metadata, dependencies, and tool configuration.
#
# Core Dependencies:
#   - fastapi>=0.115.0          Async web framework
#   - uvicorn[standard]>=0.30.0 ASGI server with hot reload
#   - openai>=1.50.0            OpenAI API client (embeddings + chat)
#   - langchain>=0.3.0          LLM orchestration framework
#   - langchain-openai>=0.2.0   LangChain OpenAI integration
#   - langgraph>=0.2.0          Stateful graph-based chains
#   - faiss-cpu>=1.8.0          Facebook AI Similarity Search
#   - chromadb>=0.5.0           ChromaDB vector database
#   - PyMuPDF>=1.24.0           Fast PDF parsing (fitz)
#   - pdfplumber>=0.11.0        Fallback PDF parsing (tables/complex layouts)
#   - tiktoken>=0.7.0           OpenAI tokenizer (accurate token counting)
#   - pydantic>=2.8.0           Data validation and schemas
#   - pydantic-settings>=2.4.0  Settings management from env vars
#   - pyyaml>=6.0               YAML config file support
#   - aiofiles>=24.0            Async file I/O
#   - httpx>=0.27.0             Async HTTP client
#   - python-multipart>=0.0.9   Multipart form data (file uploads)
#   - numpy>=1.26.0             Numerical operations (FAISS vectors)
#
# Dev Dependencies:
#   - pytest>=8.3.0             Test framework
#   - pytest-asyncio>=0.24.0    Async test support
#   - pytest-cov>=5.0.0         Code coverage
#   - httpx>=0.27.0             FastAPI test client
#   - ruff>=0.6.0               Linter and formatter
#   - mypy>=1.11.0              Static type checker
#
# Python Version: >=3.11
# =============================================================================

# [project]
# name = "rag-pdf-qa"
# version = "0.1.0"
# description = "Production-grade RAG system for PDF Question Answering"
# requires-python = ">=3.11"
#
# [project.scripts]
# serve = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
#
# [tool.pytest.ini_options]
# asyncio_mode = "auto"
# testpaths = ["tests"]
#
# [tool.ruff]
# line-length = 100
# target-version = "py311"
#
# [tool.mypy]
# python_version = "3.11"
# strict = true
