[project]
name = "docmind"
version = "0.1.0"
description = "DocMind — AI-powered PDF Q&A with conversational memory and streaming"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.50.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "faiss-cpu>=1.8.0",
    "chromadb>=0.5.0",
    "PyMuPDF>=1.24.0",
    "pdfplumber>=0.11.0",
    "tiktoken>=0.7.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pyyaml>=6.0",
    "aiofiles>=24.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "numpy>=1.26.0",
    "cohere>=5.0.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
